Prevent blinking with "backface-visibility: hidden"

--- a/css/img_global.css
+++ b/css/img_global.css
@@ -4,6 +4,10 @@ body {
 	margin-bottom: auto;
 }
 
+* {
+  backface-visibility: hidden;
+}
+
 blockquote blockquote {
 	margin-left: 0em;
 }
